<resources>
    <string name="app_name">Cook Book</string>
    <string name="action_settings">Settings</string>
    <string name="photolist">PhotoList</string>
    <string name="name">name</string>
    <string name="ingredients">ingredients</string>
    <string-array name="mainz">
        <item>Recipe Database</item>
        <item>Saved Recipes</item>
        <item>Meal Plan</item>
        <item>Shopping List</item>
    </string-array>
    <string-array name="recipe_id">
        <item>1324</item>
        <item>2435</item>
        <item>3546</item>
    </string-array>
    <string-array name="recipe_name">
        <item>Chilli</item>
        <item>Curry</item>
        <item>Bolognese</item>
    </string-array>
    <string-array name="recipe_ingredients">
        <item>Mince, Tomato, Powder, Rice</item>
        <item>Chicken, Tomato, Paste, Rice</item>
        <item>Mince, Tomato, Basil, Spaghetti</item>
    </string-array>
    <string-array name="recipe_directions">
        <item>Cook mince, add tomato and powder, simmer while boiling rice.</item>
        <item>Cook chicken, add tomato and paste, simmer while boiling rice.</item>
        <item>Cook mince, add tomato and basil, simmer while boiling spaghetti.</item>
    </string-array>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_saved">Saved Recipes</string>
    <string name="title_activity_saved_instructions">SavedInstructions</string>
    <string name="title_activity_meal_plan">MealPlanActivity</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="add_breakfast">+ Add Breakfast</string>
    <string name="add_lunch">+ Add Lunch</string>
    <string name="add_dinner">+ Add Dinner</string>
    <string name="title_activity_meal_picker">MealPickerActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="meal_plan">Meal Plan</string>
    <string name="meal_choices">Meal Choices</string>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>
    <string name="shopping_list">Shopping List</string>
    <string name="clear">Clear Meal Plan</string>
    <string name="title_activity_photograph">PhotographActivity</string>
    <string name="photograph">Photograph</string>
    <string name="creater">Create your own Recipe!</string>
    <string name="OwnRecipe">New Recipe</string>
    <string name="save">Save</string>
</resources>
